--- a/scripts/views/index.ejs
+++ b/scripts/views/index.ejs
@@ -2,13 +2,18 @@
 <html>
 	<head>
 		<title>NPS Kiosk</title>
+
+		<style media="screen">
+			a.custom-link,
+			a.custom-link:hover {
+				color: inherit;
+			}
+		</style>
+
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 		<!-- Bootstrap CSS -->
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-		<!--<style>
-		 .row div{padding: 20px 10px; border: 1px solid;}
-	 </style>-->
 
 	</head>
 
@@ -16,23 +21,72 @@
 
     <% include partials/nav.ejs %>
 
+		<!-- Carousel -->
+		<div class="bd-example">
+		  <div id="carouselExampleCaptions" class="carousel slide" style="height: 600px; width: 1000px; margin: 0 auto" data-ride="carousel">
+		    <ol class="carousel-indicators">
+		      <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+		      <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+		      <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+					<li data-target="#carouselExampleCaptions" data-slide-to="3"></li>
+
+		    </ol>
+		    <div class="carousel-inner">
+		      <div class="carousel-item active">
+		        <img src="https://www.nps.gov/yose/planyourvisit/images/halfdome-snow-960web.jpg?maxwidth=1200&maxheight=1200&autorotate=false" height="600px" width="1000px" class="d-block w-100" alt="...">
+		        <div class="carousel-caption d-none d-md-block">
+							<a href="/parks/yose" class="custom-link">
+			          <h5 class="display-4"><strong>Yosemite National Park</strong></h5>
+			          <p class="lead">Yosemite National Park, CA</p>
+							</a>
+		        </div>
+		      </div>
+		      <div class="carousel-item">
+		        <img src="https://washington-org.s3.amazonaws.com/s3fs-public/pixels.sh_visitors-to-the-lincoln-memorial-at-night_mydccool-via-crowdriff.jpg" height="600px" width="1000px" class="d-block w-100" alt="...">
+		        <div class="carousel-caption d-none d-md-block">
+							<a href="/parks/linc" class="custom-link">
+			          <h5 class="display-4"><strong>Lincoln Memorial</strong></h5>
+			          <p class="lead">Washington, DC</p>
+							</a>
+		        </div>
+		      </div>
+					<div class="carousel-item">
+		        <img src="https://www.backpacker.com/.image/t_share/MTQ0OTE0MTA4OTAzOTI1MzEz/mt-rainier.jpg" height="600px" width="1000px" class="d-block w-100" alt="...">
+		        <div class="carousel-caption d-none d-md-block">
+							<a href="/parks/mora" class="custom-link">
+			          <h5 class="display-4"><strong>Mount Rainier National Park</strong></h5>
+			          <p class="lead">Ashford, WA</p>
+							</a>
+		        </div>
+		      </div>
+					<div class="carousel-item">
+		        <img src="https://cbsla.files.wordpress.com/2015/06/shutterstock_258355064.jpg?w=1000&h=576&crop=1" height="600px" width="1000px" class="d-block w-100" alt="...">
+		        <div class="carousel-caption d-none d-md-block">
+							<a href="/parks/arch" class="custom-link">
+			          <h5 class="display-4"><strong>Arches National Park</strong></h5>
+			          <p class="lead">Moab, UT</p>
+							</a>
+		        </div>
+		      </div>
+		    </div>
+		    <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+		      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+		      <span class="sr-only">Previous</span>
+		    </a>
+		    <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+		      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+		      <span class="sr-only">Next</span>
+		    </a>
+		  </div>
+		</div>
+
+		<p class="lead text-center py-3"> Visit a national park today! </p>
+
 
 		<!-- JQuery, Tether, Bootstrap JS -->
 		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
-
-		<!-- Javascript (put at end of body so page can load first)-->
-		<!--<script>
-			alert("Hello");
-		</script>-->
-
-		<!-- Linking to JS file -->
-		<!--<script src="../scripts/main.js"></script>-->
-
-		<!-- Inline JS -->
-		<!--<li><a onclick="alert('Hello!');" href="search.html">Alert</a></li>-->
 
 		<script>
 			S(function () {
